# hr-intent-agent

./: .env.example  .gitignore  README.md  agent.mermaid  dashboard.html  execute_agent.py  input.json  input2.json  langgraph.json  main.py  pyproject.toml  requirements.txt  uipath.json  web_viewer.py
.uipath/: .auth.json  .error_log
__uipath/: state.db
